--- a/sass/blocks/items.scss
+++ b/sass/blocks/items.scss
@@ -1,6 +1,21 @@
 .items {
   width: 30%;
+  height: 500px;
+  padding: 20px;
   background-color: lightskyblue;
+  box-sizing: border-box;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    width: 20px;
+    margin-right: 5px;
+    background: lightskyblue;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border: 5px solid lightskyblue;
+    background-color: beige;
+  }
 }
 
 .items__list {
@@ -11,11 +26,27 @@
 
 .items__item {
   display: flex;
-  
+  justify-content: flex-end;
+  min-height: 50px;
   margin-bottom: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 5px;
   padding-left: 20px;
   background-color: lightgreen;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.items__item-name {
+  width: 50%;
+  margin-right: 10px;
+  text-align: right;
+  padding-top: 5px;
+}
+
+.items__item-flags {
+  display: flex;
+  justify-content: flex-end;
+  width: 50%;
 }
