--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,11 @@
 @import "normalize/import-now";
 
+@import "global/scaffolding";
+
 @import "blocks/wrapper";
 @import "blocks/items";
 @import "blocks/info-box";
 @import "blocks/filters";
-@import "blocks/flag";
 @import "blocks/sun";
 @import "blocks/heart";
 @import "blocks/flash";
