--- a/sass/blocks/flash.scss
+++ b/sass/blocks/flash.scss
@@ -1,4 +1,7 @@
 .flash {
-  color: transparent;
-  background: url("../img/icons/flash.svg") no-repeat center;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  text-indent: -9999px;
+  background: beige url("../img/icons/flash.svg") no-repeat center;
 }
