--- a/sass/blocks/sun.scss
+++ b/sass/blocks/sun.scss
@@ -1,5 +1,8 @@
 .sun {
-  color: transparent;
-  background: url("../img/icons/sun.svg") no-repeat center;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  text-indent: -9999px;
+  background: beige url("../img/icons/sun.svg") no-repeat center;
 }
 
