Правки по стилям прокруток списков элементов

--- a/sass/blocks/items.scss
+++ b/sass/blocks/items.scss
@@ -1,9 +1,17 @@
 .items {
   width: 30%;
-  height: 500px;
   padding: 20px;
+  padding-right: 0;
   background-color: lightskyblue;
   box-sizing: border-box;
+
+}
+
+.items__list {
+  height: 500px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
   overflow-y: scroll;
 
   &::-webkit-scrollbar {
@@ -16,12 +24,6 @@
     border: 5px solid lightskyblue;
     background-color: beige;
   }
-}
-
-.items__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
 
 .items__item {
